Update API docs TOC
* Remove unnecessary modules
* Make new folder `api` where all modules are organized in docs
* Ensure docstrings are written to docs
* Fix typo and remove cell in `getting_started.ipynb`

--- a/docs/source/getting_started.ipynb
+++ b/docs/source/getting_started.ipynb
@@ -13,7 +13,7 @@
    "id": "68650515-a6da-4918-82c4-9d0d60b2fa67",
    "metadata": {},
    "source": [
-    "Transport Analysis makes calculating transport properties simple and straightforward. Since Transport Analysis is powered by [MDAnalysis](https://www.mdanalysis.org/), we recommended that you understand MDAnalysis' [universes](https://userguide.mdanalysis.org/stable/universe.html), [atom groups](https://userguide.mdanalysis.org/stable/atomgroup.html), and [atom selection language](https://userguide.mdanalysis.org/stable/selections.html) before getting started."
+    "Transport Analysis makes calculating transport properties simple and straightforward. Since Transport Analysis is powered by [MDAnalysis](https://www.mdanalysis.org/), we recommend that you understand MDAnalysis' [universes](https://userguide.mdanalysis.org/stable/universe.html), [atom groups](https://userguide.mdanalysis.org/stable/atomgroup.html), and [atom selection language](https://userguide.mdanalysis.org/stable/selections.html) before getting started."
    ]
   },
   {
@@ -23,14 +23,6 @@
    "source": [
     "For a full list of the properties calculated, see the API documentation. If you have any questions or encounter any bugs, please raise an issue on [GitHub](https://github.com/MDAnalysis/transport-analysis)."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d13e523b-c0cd-4782-93d3-fdac4e8cba8d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
